# hdftoolbox

./: .gitignore  Makefile.am  README.md  configure.ac  plugin.py  postrm  preinst  update.sh
boxtypes/: Makefile.am
boxtypes/ET9x00/: Makefile.am
boxtypes/ET9x00/menu/: Makefile.am
boxtypes/ET9x00/scripts/: Makefile.am  spinner.sh
boxtypes/GigaBlue/: Makefile.am
boxtypes/GigaBlue/menu/: Makefile.am
boxtypes/GigaBlue/scripts/: Makefile.am  spinner.sh
boxtypes/Ixuss/: Makefile.am
boxtypes/Ixuss/menu/: Makefile.am
boxtypes/Ixuss/scripts/: Makefile.am  spinner.sh
boxtypes/TM-Twin/: Makefile.am
boxtypes/TM-Twin/menu/: Makefile.am
boxtypes/TM-Twin/scripts/: Makefile.am  spinner.sh
boxtypes/TM800/: Makefile.am
boxtypes/TM800/menu/: Makefile.am
boxtypes/TM800/scripts/: Makefile.am
boxtypes/Vu+Duo/: Makefile.am
boxtypes/Vu+Duo/menu/: Makefile.am
boxtypes/Vu+Duo/scripts/: Makefile.am  spinner.sh
boxtypes/Vu+Solo/: Makefile.am
boxtypes/Vu+Solo/menu/: Makefile.am
boxtypes/Vu+Solo/scripts/: Makefile.am  spinner.sh
meta/: Makefile.am  plugin_hdf-toolbox.xml
usr/lib/enigma2/python/Plugins/Extensions/HDF-Toolbox/: .gitignore  IPTVTimer.py  Makefile.am  downloader.py  issue.net_logo  main.cfg  plugin.py  update.sh
usr/lib/enigma2/python/Plugins/Extensions/HDF-Toolbox/e2scripts/: kodi_shutdown.sh
usr/lib/enigma2/python/Plugins/Extensions/HDF-Toolbox/menu/: fixes.cfg  infos.cfg  iptv.cfg  restorestbkerneldrv.cfg  tools.cfg
usr/lib/enigma2/python/Plugins/Extensions/HDF-Toolbox/scripts/: IPTV.sh  IPTV_Adult.sh  IPTV_All_in_one_Bouquet.sh  IPTV_Bouquet.sh  IPTV_Germany.sh  IPTV_Germany_EPG.sh  IPTV_Italy.sh  IPTV_Music.sh  IPTV_Russia.sh  IPTV_Turkish.sh  IPTV_Various.sh  IPTV_Webcams.sh  IPTV_patch_5002_4097.sh  all-hbbtv.sh  autostart.sh  b_stbkerneldrivers.sh  bouquets_b.sh  bouquets_r.sh  cleanup_timer.sh  create_teamimage.sh  create_teamimage_austria.sh  create_teamimage_german.sh  create_teamimage_pixbox.sh  create_zeroimage.sh  del_epg.sh  djmount.sh  driver_template.sh  dvbdate.sh  et-hbbtv-old.sh  et-hbbtv.sh  fix_gb_display.sh  fix_opkg.sh  fix_resolv.sh  fix_samba.sh  fix_softcam_start.sh  fix_version_info.sh  geninstall  genstbtoolmenu.sh  hbbtv.sh  hdf_news.sh  (+22 more)
(+31 files in other folders)
